Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <p>The Guide describes topics which are important to understand hardware business from a startup's perspective:</p>
 
 <ul>
-<li><a href="#The-things">Differences between HW and SW startups</a></li>
+<li><a href="#hw_vs_sw">Differences between HW and SW startups</a></li>
 </ul><h1>
 <a name="preface" class="anchor" href="#preface"><span class="octicon octicon-link"></span></a>Preface</h1>
 
@@ -61,11 +61,12 @@
 
 <p>The Guide is published on this site and will be occasionally updated. So please do comment on it. I’ll do my best to keep it alive and current. The Guide is published under the GNU public licence. So, basically, do whatever you want with it, just reference it wherever you use it.</p>
 
-<h1>
-<a name="the-things" class="anchor" href="#the-things"><span class="octicon octicon-link"></span></a>The things</h1>
+<p><a name="hw_vs_sw"></a></p>
 
-<p>software startups don’t have to deal with! 
-Hardware is hard. For a reason. But that's also an advantage. </p>
+<h1>
+<a name="the-thingssoftware-startups-dont-have-to-deal-with" class="anchor" href="#the-thingssoftware-startups-dont-have-to-deal-with"><span class="octicon octicon-link"></span></a>The thingssoftware startups don’t have to deal with!</h1>
+
+<p>Hardware is hard. For a reason. But that's also an advantage. </p>
 
 <p>In broad strokes, there are a few areas that are important in early stage hardware business and are not part of a software startup resources kit. It is not a complete list, but rather a list of additional resources that a hardware startup needs, on top of everything else, to be successful. All other resources like product management, software engineering, usability design, user support, sales, marketing, are still required as they are in any other businesses. </p>
 
