Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -41,8 +41,18 @@
 <p>The Guide describes topics which are important to understand hardware business from a startup's perspective:</p>
 
 <ul>
-<li><a href="#hw_vs_sw">Differences between HW and SW startups</a></li>
-</ul><h1>
+<li><a href="#hw_vs_sw">The things software startup doesn't have to deal with!</a></li>
+<li><a href="#Phases">The 5 phases in a hardware startup’s life</a></li>
+<li><a href="#Target_markets">Target Markets</a></li>
+<li><a href="#Traction">Traction and Sales</a></li>
+<li><a href="#Margin">Margins and BOMs</a></li>
+<li><a href="#Patents">Intellectual Property and Patents</a></li>
+<li><a href="#Manufacturing">Manufacturing and risks</a></li>
+<li><a href="#Capital">Capital Requirements</a></li>
+<li><a href="#Pricing">Pricing</a></li>
+</ul><p><a name="Preface"></a></p>
+
+<h1>
 <a name="preface" class="anchor" href="#preface"><span class="octicon octicon-link"></span></a>Preface</h1>
 
 <p>I have always been wondering: Where do hardware investors get their training from?</p>
@@ -64,7 +74,7 @@
 <p><a name="hw_vs_sw"></a></p>
 
 <h1>
-<a name="the-thingssoftware-startups-dont-have-to-deal-with" class="anchor" href="#the-thingssoftware-startups-dont-have-to-deal-with"><span class="octicon octicon-link"></span></a>The thingssoftware startups don’t have to deal with!</h1>
+<a name="the-things-software-startups-dont-have-to-deal-with" class="anchor" href="#the-things-software-startups-dont-have-to-deal-with"><span class="octicon octicon-link"></span></a>The things software startups don’t have to deal with!</h1>
 
 <p>Hardware is hard. For a reason. But that's also an advantage. </p>
 
@@ -122,6 +132,8 @@
 
 <p>So, the company needs a person who sources the components, organises the tooling, negotiates prices, lead times, payment terms, and coordinates manufacturers so that everything works. Since there are a lot of things that will go wrong, it's likely a full person job! So that’s another dimension to the hardware startup framework.</p>
 
+<p><a name="Phases"></a></p>
+
 <h1>
 <a name="the-5-phases-in-a-hardware-startups-life" class="anchor" href="#the-5-phases-in-a-hardware-startups-life"><span class="octicon octicon-link"></span></a>The 5 phases in a hardware startup’s life</h1>
 
@@ -162,7 +174,9 @@ The manufacturing phase comes with a whole bunch of challenges. Particularly in 
 <ol>
 <li>The scaling phase
 Scaling the company when it’s successful enough is the last phase. When it can start working on larger batches, distribution partnerships, has enough working capital to finance production, it stops being a hardware startup, but rather becomes a proper hardware company. And it should be viewed as such, from a risk assessment perspective to ability to perform. </li>
-</ol><h1>
+</ol><p><a name="Target_markets"></a></p>
+
+<h1>
 <a name="target-markets" class="anchor" href="#target-markets"><span class="octicon octicon-link"></span></a>Target markets</h1>
 
 <p>The key to product positioning is to understand what is startup's target market. Talking broadly, there are three target markets and designing for them greatly influences recruiting, design and production processes. </p>
@@ -179,7 +193,9 @@ Scaling the company when it’s successful enough is the last phase. When it can
 
 <ol>
 <li>Tech oriented products target engineers. Their core driver is high tech, not design or handling robustness. They thrive on tech, specs, close developer relations. They can be an excellent source of partners, however markets are often limited. Tech oriented products need to demonstrate clear tech leadership and a clear roadmap for future innovations. An investor should look closely at tech talent amongst other things. The business case is that they provide a product that their clients will use to access other markets. The Raspberry Pi is a great example of that. An API or a software library is the closest software business analogy.</li>
-</ol><h1>
+</ol><p><a name="Traction"></a></p>
+
+<h1>
 <a name="traction-and-sales" class="anchor" href="#traction-and-sales"><span class="octicon octicon-link"></span></a>Traction and sales</h1>
 
 <p>Traction is obviously a proof of growth. In the hardware world that translate to sales, measured in number of products sold/shipped. Period. The reason for this is that if you want to compare it to anything, you need to have a comparable unit. Money is not one because you have no clue about the margin, so you’re comparing sales of different products.</p>
@@ -214,10 +230,15 @@ Scaling the company when it’s successful enough is the last phase. When it can
 
 <p>I almost always get a question about traction in my investor pitches, and never a question about context. And I'm still puzzled about why not. Just talking about traction without context makes very little sense to me since it makes number completely incomparable. It basically tells me that the investor has little experience in working with hardware. </p>
 
+<p><a name="Margins"></a></p>
+
 <h1>
 <a name="margins-and-boms" class="anchor" href="#margins-and-boms"><span class="octicon octicon-link"></span></a>Margins and BOMs</h1>
 
 <p>Margins and bill-of-material (BOM) are very important concepts in hardware startups, but often ignored. In vast majority of cases, hardware startups make products that need to be sold to their clients. Margin and BOM are inversely correlated. Even though in theory we have different BOM's, in the hardware startup world the term BOM is most often everything that it costs to build a unit without direct costs of the company. Material, assembly, packaging... Subtract that from unit price and you get the margin. </p>
+
+<h2>
+<a name="margin" class="anchor" href="#margin"><span class="octicon octicon-link"></span></a>Margin</h2>
 
 <p><em>Margin</em> is obviously a core driver of the company's income. Asking for revenue without understanding margin is pretty meaningless. It's a common mistake that software investors make. In today's early stage software world the majority of cash outflow happens to pay salaries and maybe some server costs. In other words, BOM in software startups is almost 0 and the margin is almost 100%. In hardware, one first has to pay suppliers and what's left is the income for the company. From THAT one needs to pay salaries, servers and profits. </p>
 
@@ -229,8 +250,10 @@ Scaling the company when it’s successful enough is the last phase. When it can
 
 <p>Even though it's clear that financially the businesses are fairly comparable, some still maintain they are different because one has 1M users and the other a mere 12k in the first year. Looking at this example, how do you decide?</p>
 
-<h1>
-<a name="economics-of-distribution" class="anchor" href="#economics-of-distribution"><span class="octicon octicon-link"></span></a>Economics of distribution</h1>
+<p><a name="Distribution"></a></p>
+
+<h2>
+<a name="economics-of-distribution" class="anchor" href="#economics-of-distribution"><span class="octicon octicon-link"></span></a>Economics of distribution</h2>
 
 <p>How the product gets to the customers is often the key to success. In the software/services world people like to talk about virality or similar mechanisms for distribution. That's way harder in the hardware world. </p>
 
@@ -244,6 +267,8 @@ Scaling the company when it’s successful enough is the last phase. When it can
 
 <p>An investor needs to be aware that different hardware businesses require different approaches and have different financing needs. One simple cannot just define one rule and smear it over all.</p>
 
+<p><a name="Patents"></a></p>
+
 <h1>
 <a name="intellectual-property--patents" class="anchor" href="#intellectual-property--patents"><span class="octicon octicon-link"></span></a>Intellectual property / patents</h1>
 
@@ -256,6 +281,8 @@ Scaling the company when it’s successful enough is the last phase. When it can
 <p>Third, until a startup is successful and has significant funds/revenues/traction, it is highly sensitive to any kind of litigation. Here there is a big difference between continental Europe and US. In US, basically everybody carries its own costs and there is almost no first-use protection for IP. In continental Europe, there is first-use precedents, lawyer fees are reasonable and often ceiled, and whoever loses carries all costs of the winning party. So at least in Europe patent litigation is slightly more just, but that's not the point. </p>
 
 <p>The point is that, on average, patent litigation in US costs at least $1MM. That’s the sort of money a startup does not have. So if an investor is worried about that, they should put up that money on the table in case of the patent lawsuit. At least in the very early stage. Putting conditions on patents during investments, and not providing contingency cash, is counterproductive.  </p>
+
+<p><a name="Manufacturing"></a></p>
 
 <h1>
 <a name="manufacturing" class="anchor" href="#manufacturing"><span class="octicon octicon-link"></span></a>Manufacturing</h1>
@@ -273,6 +300,8 @@ Scaling the company when it’s successful enough is the last phase. When it can
 <p>The third variable in deciding about going overseas with production is <em>volume</em>. A startup working on small production batches is likely to produce their product in thousands. Which in hardware terms is small. Some of the larger suppliers actually have minimal order volumes of 10,000. So you have to rely on smaller ones that cannot utilise economies of scale, the price difference per unit is not geographically conditioned and rather small in small batches. On top of that, there are always set up costs for production runs, initial tooling, production templates and other initial costs, which at small volumes significantly influence cost structure. Variable costs difference per unit gets really small at small volumes. So why would you expose yourself to risks related to time delays and quality problems if there are no financial advantages at small units? </p>
 
 <p>A blunt question: "Why aren't you manufacturing in China?" is meaningless, unless you put it in context of the phase the startup is, time constraints, quality control risks* and batch volumes. Having looked at all these parameters, you'll have a much better sense of the startup’s ability to perform and where they need to optimise.</p>
+
+<p><a name="Capital"></a></p>
 
 <h1>
 <a name="capital-requirements" class="anchor" href="#capital-requirements"><span class="octicon octicon-link"></span></a>Capital requirements</h1>
