Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,38 +1,35 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="HWguide : " />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>HWguide by alesspetic</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>HWguide</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1>HWguide</h1>
+        <p></p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/alesspetic/hwguide">View on GitHub</a>
+        <p class="view"><a href="https://github.com/alesspetic/hwguide">View the Project on GitHub <small>alesspetic/hwguide</small></a></p>
 
-          <h1 id="project_title">HWguide</h1>
-          <h2 id="project_tagline"></h2>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/alesspetic/hwguide/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/alesspetic/hwguide/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+        <ul>
+          <li><a href="https://github.com/alesspetic/hwguide/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/alesspetic/hwguide/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/alesspetic/hwguide">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
         <h1>
-<a name="about-the-guide" class="anchor" href="#about-the-guide"><span class="octicon octicon-link"></span></a>About the Guide</h1>
+<a name="an-investors-guide-to-hardware-startups" class="anchor" href="#an-investors-guide-to-hardware-startups"><span class="octicon octicon-link"></span></a>An Investor's guide to Hardware Startups</h1>
 
 <p>This is an entrepreneur's guide for hardware investors. The goal of this Guide is to show as bluntly as possible the differences between hardware and software startups and why the standard investment tests you can use for software often don’t work with hardware, or at least they are not enough. </p>
 
@@ -370,17 +367,12 @@ Scaling the company when it’s successful enough is the last phase. When it can
 
 <p>Again it's up to investors to figure out what makes sense for the business they invest into.  However, directly copying software models and thinking into hardware worlds is dangerous and often leads to bad decisions.</p>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">HWguide maintained by <a href="https://github.com/alesspetic">alesspetic</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/alesspetic">alesspetic</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-
+    <script src="javascripts/scale.fix.js"></script>
     
-
   </body>
 </html>
