Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="javascripts/scale.fix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -15,17 +16,18 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>HWguide</h1>
-        <p></p>
-
-        <p class="view"><a href="https://github.com/alesspetic/hwguide">View the Project on GitHub <small>alesspetic/hwguide</small></a></p>
-
+        <h1 class="header">HWguide</h1>
+        <p class="header"></p>
 
         <ul>
-          <li><a href="https://github.com/alesspetic/hwguide/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/alesspetic/hwguide/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/alesspetic/hwguide">View On <strong>GitHub</strong></a></li>
+          <li class="download"><a class="buttons" href="https://github.com/alesspetic/hwguide/zipball/master">Download ZIP</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/alesspetic/hwguide/tarball/master">Download TAR</a></li>
+          <li><a class="buttons github" href="https://github.com/alesspetic/hwguide">View On GitHub</a></li>
         </ul>
+
+        <p class="header">This project is maintained by <a class="header name" href="https://github.com/alesspetic">alesspetic</a></p>
+
+
       </header>
       <section>
         <h1>
@@ -138,27 +140,27 @@
 
 <p>Although you’re able to create a viral game or service in a few weeks’ time, there are natural limitations when comparing a hardware product development cycle with hacking software solutions. The reason why I’m outlining this is because it’s very inviting to compare companies and, for instance, think that a company is not as efficient if it doesn’t ship in three months, or if it delays a launch when producing hardware.</p>
 
-<ol>
-<li>The sketching phase
-Sketching an idea is not being a startup yet. The ideas for a product are often driven from two sources. First is tech driven. Founders have some cool tech that is looking for a problem. The second possibility is that there is a problem and founders look for a possible solution. Both are valid points. </li>
-</ol><p>At this stage, the company usually has sketches and ideas. That's as early stage as it can get. Interestingly enough, some of the successful crowdsourcing campaigns have been in such stage, working only with renders on Kickstarter or Indiegogo, but are still used as a reference as being a successful hardware startup. Usually they don't ship at the end, or at least they have really long delays. They face a long list risks and only the really lucky ones will make it to become a reasonable businesses.</p>
+<p>*The sketching phase#
+Sketching an idea is not being a startup yet. The ideas for a product are often driven from two sources. First is tech driven. Founders have some cool tech that is looking for a problem. The second possibility is that there is a problem and founders look for a possible solution. Both are valid points. </p>
 
-<ol>
-<li>The prototyping phase
-In the prototyping phase, most hardware startups go public with a PR push, because they start feeling the need for funding or at least exposure. Quite often the prototypes are made with development platforms like Arduinos or Raspberry PIs. Almost all of the crowd-funding companies are in this stage. They have a working prototype, usually 3d printed casings, some proof of concepts. The software side is lacking, but the hardware somehow works. The majority of preorders happen in this phase. </li>
-</ol><p>The company is usually 12 months away from shipping the product, if they're lucky.  </p>
+<p>At this stage, the company usually has sketches and ideas. That's as early stage as it can get. Interestingly enough, some of the successful crowdsourcing campaigns have been in such stage, working only with renders on Kickstarter or Indiegogo, but are still used as a reference as being a successful hardware startup. Usually they don't ship at the end, or at least they have really long delays. They face a long list risks and only the really lucky ones will make it to become a reasonable businesses.</p>
 
-<ol>
-<li>The production phase
-In the production phase, the company is setting up manufacturing processes, designing and tooling casings, packaging, writing manuals, manufacturing, working through certification and so forth. Risk wise there is not a lot of difference to the second phase, however the companies’ ability to execute comes to a real test. If they are not really resourceful, they will fail. </li>
-</ol><p>If an investor believes in the company and the product, and it’s obvious that the company won’t make it on their own, now it’s the time to pour the money in and help find the person or providers who’ll carry the company over this phase. </p>
+<p><em>The prototyping phase</em>
+In the prototyping phase, most hardware startups go public with a PR push, because they start feeling the need for funding or at least exposure. Quite often the prototypes are made with development platforms like Arduinos or Raspberry PIs. Almost all of the crowd-funding companies are in this stage. They have a working prototype, usually 3d printed casings, some proof of concepts. The software side is lacking, but the hardware somehow works. The majority of preorders happen in this phase. </p>
+
+<p>The company is usually 12 months away from shipping the product, if they're lucky.  </p>
+
+<p><em>The production phase</em>
+In the production phase, the company is setting up manufacturing processes, designing and tooling casings, packaging, writing manuals, manufacturing, working through certification and so forth. Risk wise there is not a lot of difference to the second phase, however the companies’ ability to execute comes to a real test. If they are not really resourceful, they will fail. </p>
+
+<p>If an investor believes in the company and the product, and it’s obvious that the company won’t make it on their own, now it’s the time to pour the money in and help find the person or providers who’ll carry the company over this phase. </p>
 
 <p>The company is 6 months away to shipping the product.  </p>
 
-<ol>
-<li>The manufacturing phase
-The manufacturing phase comes with a whole bunch of challenges. Particularly in the first batch there are issues with quality and delays. User support really comes to the test at this stage. A lot of problems are caused by external factors which need to be managed. </li>
-</ol><p>Production cycles takes time, usually 8-12 weeks. And if a company runs out of stock in between two batches, it can’t ship, so it can’t sell. The only way around it is to increase batch size. So instead of 3,000 units, the company needs to produce 15,000 of them at one time. And that takes working capital, which you, as an investor, need to provide in the initial phases.</p>
+<p><em>The manufacturing phase</em>
+The manufacturing phase comes with a whole bunch of challenges. Particularly in the first batch there are issues with quality and delays. User support really comes to the test at this stage. A lot of problems are caused by external factors which need to be managed. </p>
+
+<p>Production cycles takes time, usually 8-12 weeks. And if a company runs out of stock in between two batches, it can’t ship, so it can’t sell. The only way around it is to increase batch size. So instead of 3,000 units, the company needs to produce 15,000 of them at one time. And that takes working capital, which you, as an investor, need to provide in the initial phases.</p>
 
 <p>There is one additional risk involved. As long as the company produces small batches, it’s somewhere below ground on the totem pole of importance with suppliers. Orders will get cancelled, changed and misplaced. Even worse, I’ve seen poor PCB manufacturing, fake chips on the circuits, forged power supplies, electromagnetic influences on stability of the circuits and a whole bunch of other, unforeseen issues. </p>
 
@@ -168,10 +170,10 @@ The manufacturing phase comes with a whole bunch of challenges. Particularly in 
 
 <p>The company is shipping, but often with delays.</p>
 
-<ol>
-<li>The scaling phase
-Scaling the company when it’s successful enough is the last phase. When it can start working on larger batches, distribution partnerships, has enough working capital to finance production, it stops being a hardware startup, but rather becomes a proper hardware company. And it should be viewed as such, from a risk assessment perspective to ability to perform. </li>
-</ol><p><a name="Target_markets"></a></p>
+<p><em>The scaling phase</em>
+Scaling the company when it’s successful enough is the last phase. When it can start working on larger batches, distribution partnerships, has enough working capital to finance production, it stops being a hardware startup, but rather becomes a proper hardware company. And it should be viewed as such, from a risk assessment perspective to ability to perform. </p>
+
+<p><a name="Target_markets"></a></p>
 
 <h1>
 <a name="target-markets" class="anchor" href="#target-markets"><span class="octicon octicon-link"></span></a>Target markets</h1>
@@ -180,17 +182,17 @@ Scaling the company when it’s successful enough is the last phase. When it can
 
 <p>Target markets clearly define what should be the core advantages of the startup. In consumer products, high tech comes secondary to usability and design, while in business products, utility and manageability is key. These things define what kind of talent, plans and timeframes the startup needs to put in place, and it’s a great tool to analyse the startup’s strategic ability to plan and sync their resources with their market.</p>
 
-<ol>
-<li>Consumer oriented products need to be well designed, have a simplified UI and as seamless user experience as possible. This also means that the startup has the longest path to production, since there are a ton of details that need to be thought through and defined. The startup has to nail the product, software, packaging, manuals, web site and support. Its defining corner stone is usability. On average, consumers don't have the patience to read through manuals. </li>
-</ol><p>When looking at consumer hardware, an investor needs to look at product advantages in terms of usability, design.</p>
+<p><em>Consumer oriented</em> products need to be well designed, have a simplified UI and as seamless user experience as possible. This also means that the startup has the longest path to production, since there are a ton of details that need to be thought through and defined. The startup has to nail the product, software, packaging, manuals, web site and support. Its defining corner stone is usability. On average, consumers don't have the patience to read through manuals. </p>
 
-<ol>
-<li>Business oriented products need emphasis on robustness and manageability. Business buyers are often not the users of the product. They are particularly interested in utility, ROI and longevity. Coolness and high tech comes second. Therefore an investor needs to assess the startup's ability to sell to businesses, and emphasise maintaining quality and utility. One particular aspect is mass deployment which is often neglected. Are there processes in place that would allow deployment to business, how long will the sales process be and how is production synced with them? </li>
-</ol><p>This all will affect time to validation, traction analysis and will need to be financed. </p>
+<p>When looking at consumer hardware, an investor needs to look at product advantages in terms of usability, design.</p>
 
-<ol>
-<li>Tech oriented products target engineers. Their core driver is high tech, not design or handling robustness. They thrive on tech, specs, close developer relations. They can be an excellent source of partners, however markets are often limited. Tech oriented products need to demonstrate clear tech leadership and a clear roadmap for future innovations. An investor should look closely at tech talent amongst other things. The business case is that they provide a product that their clients will use to access other markets. The Raspberry Pi is a great example of that. An API or a software library is the closest software business analogy.</li>
-</ol><p><a name="Traction"></a></p>
+<p><em>Business oriented</em> products need emphasis on robustness and manageability. Business buyers are often not the users of the product. They are particularly interested in utility, ROI and longevity. Coolness and high tech comes second. Therefore an investor needs to assess the startup's ability to sell to businesses, and emphasise maintaining quality and utility. One particular aspect is mass deployment which is often neglected. Are there processes in place that would allow deployment to business, how long will the sales process be and how is production synced with them? </p>
+
+<p>This all will affect time to validation, traction analysis and will need to be financed. </p>
+
+<p><em>Tech oriented</em> products target engineers. Their core driver is high tech, not design or handling robustness. They thrive on tech, specs, close developer relations. They can be an excellent source of partners, however markets are often limited. Tech oriented products need to demonstrate clear tech leadership and a clear roadmap for future innovations. An investor should look closely at tech talent amongst other things. The business case is that they provide a product that their clients will use to access other markets. The Raspberry Pi is a great example of that. An API or a software library is the closest software business analogy.</p>
+
+<p><a name="Traction"></a></p>
 
 <h1>
 <a name="traction-and-sales" class="anchor" href="#traction-and-sales"><span class="octicon octicon-link"></span></a>Traction and sales</h1>
@@ -368,11 +370,10 @@ Scaling the company when it’s successful enough is the last phase. When it can
 <p>Again it's up to investors to figure out what makes sense for the business they invest into.  However, directly copying software models and thinking into hardware worlds is dangerous and often leads to bad decisions.</p>
       </section>
       <footer>
-        <p>This project is maintained by <a href="https://github.com/alesspetic">alesspetic</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p><small>Hosted on <a href="http://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
       </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
-    
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+		
   </body>
 </html>
