Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <li><a href="#Phases">The 5 phases in a hardware startup’s life</a></li>
 <li><a href="#Target_markets">Target Markets</a></li>
 <li><a href="#Traction">Traction and Sales</a></li>
-<li><a href="#Margin">Margins and BOMs</a></li>
+<li><a href="#Margins">Margins and BOMs</a></li>
 <li><a href="#Patents">Intellectual Property and Patents</a></li>
 <li><a href="#Manufacturing">Manufacturing and risks</a></li>
 <li><a href="#Capital">Capital Requirements</a></li>
@@ -281,7 +281,7 @@ Scaling the company when it’s successful enough is the last phase. When it can
 
 <p>The point is that, on average, patent litigation in US costs at least $1MM. That’s the sort of money a startup does not have. So if an investor is worried about that, they should put up that money on the table in case of the patent lawsuit. At least in the very early stage. Putting conditions on patents during investments, and not providing contingency cash, is counterproductive.  </p>
 
-<p><a name="Manufacturing"></a></p>
+<p><a name="Manufacturing%20and%20Risks"></a></p>
 
 <h1>
 <a name="manufacturing" class="anchor" href="#manufacturing"><span class="octicon octicon-link"></span></a>Manufacturing</h1>
@@ -337,6 +337,8 @@ Scaling the company when it’s successful enough is the last phase. When it can
 <p>Another important issue is the nature of batches. Unless the startup is extremely lucky to have just-in-time production capabilities, they need to order production in batches. Again, each batch requires working capital, but also means that it carries certain lead times to be manufactured. That's a production cycle. It's a major curse for early stage startups. Usually, production cycles are between 8-12 weeks, so if the startup is successful in selling their product fast, and if they don't have enough capital to finance at least 2 production cycles, they will have a hard time keeping their market presence, because there are not a lot of clients that will put up with several months of backlogs. </p>
 
 <p>So, as an investor, you have to realistically assess what are the startup needs and support them with initial bathes. If you're not prepared to do that, don't invest in hardware startups.</p>
+
+<p><a name="Pricing"></a></p>
 
 <h1>
 <a name="pricing-models" class="anchor" href="#pricing-models"><span class="octicon octicon-link"></span></a>Pricing models</h1>
