Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <li><a href="#Patents">Intellectual Property and Patents</a></li>
 <li><a href="#Manufacturing">Manufacturing and risks</a></li>
 <li><a href="#Capital">Capital Requirements</a></li>
-<li><a href="#Pricing">Pricing</a></li>
+<li><a href="#Pricing">Pricing Models</a></li>
 </ul><p><a name="Preface"></a></p>
 
 <h1>
