Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <p>The Guide doesn’t touch standard themes like product fit, team, lean and other important issues. If you’re interested in those, you can find more information about them elsewhere. They still apply and they need to be considered when analysing a hardware business, but it’s beyond the scope of this Guide. So if you’re interested in learning more about the differences between an early stage software vs. hardware startup, the hardware specific risks and ways to mitigate them, do read on.  </p>
 
-<p>The Guide describes topics which are important to understand hardware business from a startup's perspective:</p>
+<p>The Guide describes topics which are important to understand hardware business from a startup's and investor's perspective:</p>
 
 <ul>
 <li><a href="#hw_vs_sw">The things software startup doesn't have to deal with!</a></li>
