added link to CubeSensors

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 <p>The issues outlined here will give you tools to better understand your investment and evaluate it. In my view, a hardware startup business is an order of magnitude more complex than a software business with similar resources. However, I also believe that every issue that makes a hardware startup more complex is actually a potential competitive advantage. Because a competitor will have to deal with the same issues. And this is exactly where investors can make a difference!</p>
 
-<p>I’m grateful to my team at CubeSensors for the opportunity to work together on a hardware startup. Most of the issues have been experienced in a real world situation together with them and most ideas presented in the Guide have been shaped in long, after-hours debates at our office. </p>
+<p>I’m grateful to my team at <a href="http://cubesensors.com">CubeSensors</a> for the opportunity to work together on a hardware startup. Most of the issues have been experienced in a real world situation together with them and most ideas presented in the Guide have been shaped in long, after-hours debates at our office. </p>
 
 <p>The Guide is published on this site and will be occasionally updated. So please do comment on it. I’ll do my best to keep it alive and current. The Guide is published under the GNU public licence. So, basically, do whatever you want with it, just reference it wherever you use it.</p>
 
