Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <p>The Guide describes topics which are important to understand hardware business from a startup's and investor's perspective:</p>
 
 <ul>
-<li><a href="#hw_vs_sw">The things software startup doesn't have to deal with!</a></li>
+<li><a href="#hw_vs_sw">The things software startups doesn't have to deal with!</a></li>
 <li><a href="#Phases">The 5 phases in a hardware startup’s life</a></li>
 <li><a href="#Target_markets">Target Markets</a></li>
 <li><a href="#Traction">Traction and Sales</a></li>
